--- a/docs/thesis/evaluation.tex
+++ b/docs/thesis/evaluation.tex
@@ -240,6 +240,7 @@ does any channel opening algorithm perform better than another and essentially f
 
 \section{Simulation}
 
+The aforementioned strategies and a simulation environment were implemented in python 3.5 with extensive use of the networkx library. The environment variables and each players chosen strategies can be changed in a higher level meta-language. Each strategy is discussed in detail in Appendix \ref{label}  
 % THE ADJUSTABLE SCALE FREE  http://www.uvm.edu/pdodds/files/papers/others/2002/holme2002a.pdf
 
 % https://webusers.imj-prg.fr/~ricardo.perez-marco/publications/articles/antrouting3.pdf
