--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -235,8 +235,8 @@
 
     \begin{appendices}
 %    \input{routing_fee}
-
-    \printglossary[type=main]
+	 \input{strategies}
+     \printglossary[type=main]
    
   %  \input{mirror}
 	\end{appendices}
