--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -623,9 +623,7 @@ TOR, reverse govern-print mention
 	year = "2017",
 	month = "April",
 	Day = "5"
-
 }
-
 
 % Lightning 
 
@@ -703,6 +701,14 @@ year = "",
 
 % Topology
 
+@misc{networkx,
+	author = {},
+	title = {NetworkX},
+	howpublished = {
+	\url{https://networkx.github.io/}},
+	note = {},
+	year = "",
+	}
 @article{
 	erdos:renyi:random:graphs,
 	author = {Erdős, Paul and Rényi, Albért}, 
@@ -835,6 +841,54 @@ year = "",
 
 
 % Game Theory 
+
+@article{
+	hamilton:behavior,
+	author = { Hamilton, William D. },   
+	title = { The Genetical Evolution of Social Behaviour. I },
+	publisher = {},
+	month = {February},
+	year = {1964},
+	note = { },
+	howpublished = {
+		\url{http://www.uvm.edu/pdodds/files/papers/others/1964/hamilton1964a.pdf}
+	}
+}
+
+@book{
+	smith:evolution:games,
+	author = {Smith, John M.},   
+	title = {Evolution and the Theory of Games},
+	publisher = { Cambridge University Press },
+	month = {},
+	year = {1982},
+	note = { }
+}
+
+@article{
+	smith:price:logic:animal,
+	author = {Smith, John M. and Price, G.R.},   
+	title = {The Logic of Animal Conflict},
+	journal = { Nature },
+	vol = {246},
+	day = {2},
+	month = {November},
+	year = {1973},
+	howpublished = {
+		\url{ftp://oceane.obs-vlfr.fr/pub/irisson/papers/Maynard%20Smith1973-The%20logic%20of%20animal%20conflict00.pdf}
+	}
+	note = { }
+}
+
+@book{
+	easly:kleinberg:network:crowds:markets,
+	author = {Easley, David and Kleinberg, Jon},   
+	title = { Networks, Crowds and Markets },
+	publisher = { Cambridge University Press },
+	month = {},
+	year = {2010},
+	note = { }
+}
 
 @book{
 	hespanha:noncooperative:game:theory,
