--- a/docs/thesis/strategies.tex
+++ b/docs/thesis/strategies.tex
@@ -1,2 +1,8 @@
 \chapter{Strategies Guide}
+\label{chapter:strategies}
 
+\section{Fee}
+\section{Preferential Attachment}
+\section{Timing}
+\section{Funding}
+\section{Re-balance}
