--- a/docs/thesis/evaluation.tex
+++ b/docs/thesis/evaluation.tex
@@ -40,6 +40,40 @@ It may be unusual to view demand through the usage of its medium, their is of co
 
 The cost of procuring a shortest path between s and d might not be equal for two different routing nodes dependent on already existing paths and set strategies. The viability of a strategy is in essence determined in its ability to be included in shortest paths between nodes.
 
+\section{Routing strategies under Game Theory}
+
+There are clearly marked dynamics at play here. Node operator have many different options at their disposal and although all actors may not be rational their behavior should approximate the behavior maximizing profit. In economic theory \_ . Such notion is very similar to Game Theory and as each actor's profit depends on every other actor's behavior. More exactly this problem resembles a subset of Game Theory similar to that of biological ecosystems introduced by W. D. Hamilton~\cite{hamilton:behavior} and later expanded to a rigorous framework by J.M Smith et al.~\cite{smith:price:logic:animal, smith:evolution:games} as Evolutionary Game Theory (EGT).
+
+In an ecosystem, species survival and propagation in the gene-pool depends on its behavior relative to the population. An aggressive animal may do very well in competition for feed in a population of mostly coy animals. However against a population of mostly aggressive beings it may have to fight most encounters,  
+
+ - unsuccessful individuals die off and are removed from the population and subsequently successful individuals prosper and it's genes increases in the population.
+
+
+
+Although Lightning nodes doesn't pass on genes, successful strategies are more likely to be copied than unsuccessful ones. Especially if strategies and tool are built as extensions/plugins and made available as open source and freely propagate. Similarly the success the behavior of each node, a 
+
+To evaluate strategies, the game is divided into five categories.
+
+\begin{enumerate}
+	\item \textbf{Fee}, Determine the fee on the outgoing
+	\item \textbf{Preferential Attachment}, Determine which nodes to open channels with.
+	\item \textbf{Timing}, When to open and close channels.
+	\item \textbf{Funding}, How much capital is available to the node.
+	\item \textbf{Re-balance}, When and how aggressively should a node re-balance its channels.  
+\end{enumerate}
+
+Most categories are quite distinct and natural to separate but there is some ambiguity here. Preferential Attachment could very well be considered as the same category but are kept apart to keep the complexity down. 
+
+Mixing of strategies, e.g behaving 'aggressive' 70\% of the time, ... , only regard true strategies as ... reason.
+
+
+
+
+It should be noted that profit may not be the only parameter worth maximizing as privacy can be increased with a behavior deviating from a strictly most profitable action.   
+
+does any channel opening algorithm perform better than another and essentially force the network into a scale free hub-spoke network instead of a mesh network?
+
+
 \newpage
 \onecolumn
 
@@ -136,6 +170,12 @@ only dependent on vertices whereas Johnson
 
 depends on both edges and vertices. 
 
+\subsection{Cost function}
+
+The fee is in part proportional to the size of the payment, and the aforementioned algorithm is only able to find the optimal price for one 
+
+ 
+
 \section{Topology and Preferential Attachment}
 
 Setting fee price is only one aspect of a routing node, maybe more importantly is that of opening and closing channels.
@@ -230,17 +270,11 @@ The actual degree distribution of the lightning network can be seen in Figure \r
 
 It should again be stated that the Lightning Network is still in a very early state of it's development and most of the nodes and transactions over the network are made by enthusiasts trying it out. So the current state of the degree distribution may indicate very little of future states. 
 
-\section{Routing as a Game}
-
-Lightning network consists of nodes playing game
-
-Non routing nodes, cheap as possible and possible as private as possible(?) 
-
-does any channel opening algorithm perform better than another and essentially force the network into a scale free hub-spoke network instead of a mesh network?
-
 \section{Simulation}
 
-The aforementioned strategies and a simulation environment were implemented in python 3.5 with extensive use of the networkx library. The environment variables and each players chosen strategies can be changed in a higher level meta-language. Each strategy is discussed in detail in Appendix \ref{label}  
+The aforementioned strategies and a simulation environment were implemented in python 3.5 with extensive use of the networkx library. The environment variables and each players chosen strategies can be changed in a higher level meta-language. Each strategy is discussed in detail in Appendix \ref{chapter:strategies} as well how a game may be created and simulated from altering the input file.  
+
+
 % THE ADJUSTABLE SCALE FREE  http://www.uvm.edu/pdodds/files/papers/others/2002/holme2002a.pdf
 
 % https://webusers.imj-prg.fr/~ricardo.perez-marco/publications/articles/antrouting3.pdf
