--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -652,6 +652,14 @@ TOR, reverse govern-print mention
 	year = "",
 }
 
+@article{decker:russell:Osuntokun:eltoo,
+	title = {eltoo:  A Simple Layer2 Protocol for Bitcoin},
+	author = {Decker, Christian and Russell, Rusty and Osuntokun, Olaoluwa},
+	howpublished = { \url{https://blockstream.com/eltoo.pdf} },
+	issue_date = {},
+	year = "2018",
+}
+
 @misc{repository:lnd,
 	author = {},
 	title = {Lightning node daemon},
@@ -876,6 +884,20 @@ year = "",
 	year = {1973},
 	howpublished = {
 		\url{ftp://oceane.obs-vlfr.fr/pub/irisson/papers/Maynard%20Smith1973-The%20logic%20of%20animal%20conflict00.pdf}
+	}
+	note = { }
+}
+
+@article{
+	nash:equilibrium,
+	author = {Nash JR, John F.},   
+	title = {Equilibrium points in N-person games},
+	journal = { Proceedings of the National Academy of Sciences  },
+	vol = {36},
+	page = {48-49},
+	year = {1950},
+	howpublished = {
+		\url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1063129/pdf/pnas01550-0057.pdf}
 	}
 	note = { }
 }
