--- a/docs/thesis/mirror.tex
+++ b/docs/thesis/mirror.tex
@@ -8,4 +8,18 @@
 	
 \end{displayquote}
 
-\bibliography{mirror.bib}
+{\setlength{\parindent}{0cm}
+
+{[?]} \texttt{http://johnstedt.se/docs/thesis/bordo-2018-bretton-woods.pdf} \\ 
+{[?]} \texttt{http://johnstedt.se/docs/thesis/brandes-2017-shortest-path-betweenness-centrality.pdf }\\
+{[?]} \texttt{http://johnstedt.se/docs/thesis/di-stasi-2018-routing-payments-lightning-network.pdf } \\
+{[?]} \texttt{http://johnstedt.se/docs/thesis/erdos-renyi-1959-random-graph.pdf } \\
+{[?]} \texttt{http://johnstedt.se/docs/thesis/freeman-1977-set-measures-betweenness } \\
+{[?]} \texttt{http://johnstedt.se/docs/thesis/hamilton-1964-genetical-evolution-social-behaviour.pdf }\\
+{[?]} \texttt{http://johnstedt.se/docs/thesis/lips-2001-gold-war.pdf } \\
+{[?]} \texttt{http://johnstedt.se/docs/thesis/nash-1950-equilibrium-points-n-person-game.pdf } \\
+{[?]} \texttt{http://johnstedt.se/docs/thesis/smith-price-1973-logical-animal-conflict.pdf } \\
+
+
+{[?]} \texttt{http://johnstedt.se/docs/thesis/ } \\
+}
