--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -660,6 +660,14 @@ TOR, reverse govern-print mention
 	year = "2018",
 }
 
+@article{distasi:avallone:cononico:routing,
+	title = {Routing payments on the Lightning Network},
+	author = { Di Stasi, Giovanni and Avallone, Stefano and Canonico, Roberto and Ventre, Giorgio},
+	howpublished = { },
+	issue_date = {},
+	year = "2018",
+}
+
 @misc{repository:lnd,
 	author = {},
 	title = {Lightning node daemon},
@@ -695,6 +703,8 @@ howpublished = {
 note = {},
 year = "",
 }
+
+
 
 % My repositories
 
