--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -238,7 +238,7 @@
 	 \input{strategies}
      \printglossary[type=main]
    
-  %  \input{mirror}
+    \input{mirror}
 	\end{appendices}
 
 \end{document}
