--- a/docs/thesis/mirror.tex
+++ b/docs/thesis/mirror.tex
@@ -8,6 +8,8 @@
 	
 \end{displayquote}
 
+
+\section{Articles}
 {\setlength{\parindent}{0cm}
 
 {[?]} \texttt{http://johnstedt.se/docs/thesis/bordo-2018-bretton-woods.pdf} \\ 
@@ -22,4 +24,11 @@
 
 
 {[?]} \texttt{http://johnstedt.se/docs/thesis/ } \\
+}
+
+\section{Website crawls}
+{\setlength{\parindent}{0cm}
+		
+	
+	{[?]} \texttt{http://johnstedt.se/docs/thesis/ } \\
 }
