--- a/docs/thesis/results.tex
+++ b/docs/thesis/results.tex
@@ -1,5 +1,18 @@
 \chapter{Results}
 
+Every simulation is run ten times and the mean and standard deviation($\sigma$) is calculated. 
+
+\section{Price}
+
+\begin{figure}[!htb]
+	\hspace*{-1cm}\ 
+	\centering
+	\includegraphics[width=9cm]{images/histories_deviation.png}
+	\caption{ ...
+	}
+	\label{fig:fee_curve}
+	\hspace*{2mm} 
+\end{figure}
 
 (preferential attachment)
 
