--- a/docs/thesis/discussion.tex
+++ b/docs/thesis/discussion.tex
@@ -50,7 +50,7 @@ The fees for $P_1$, $P_2$ would be very different with this brackets method.
 
 Here the fees are much larger for the payment that unbalances the channel than the payment that balances it. 
 
-However there are some clear problems with this approach. Every new payment would require each node on the path to rebroadcast the new balance to all other nodes\footnote{As brought up by Andrea Rapitzu.}. Which would scale even worse than the Bitcoin bottom layer in message passing. There would also be privacy issues as any observant node could track the payments through balance updates\footnote{As brought up by ZmnSCPxj.}.
+However there are some clear problems with this approach. Every new payment would require each node on the path to rebroadcast the new balance to all other nodes\footnote{As brought up by Andrea Rapitzu.~\cite{raspitzu:fee}}. Which would scale even worse than the Bitcoin bottom layer in message passing. There would also be privacy issues as any observant node could track the payments through balance updates\footnote{As brought up by ZmnSCPxj.~\cite{ZmnSCPxj:fee}}.
 
 \section{Future work}
 
