--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -118,6 +118,7 @@
     \fancyfoot[C]{\thepage}
     \fancyfoot[R]{\footnotesize{\today}}  
 
+\makeglossaries
 \input{glossary}
 
 \begin{document}
@@ -190,8 +191,7 @@
 
 	\label{chapter:problem}
 	\input{problem}
-	First use \gls{api}\\
-	subsequent \gls{api}	
+
 	\clearpage
 
 	\label{chapter:macroeconomics}	
