--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -704,7 +704,63 @@ note = {},
 year = "",
 }
 
+@misc{repository:rene:pickard,
+	author = {Pickard, Rene},
+	title = {Automatically-Generating-a-Robust-Topology-for-the-Lightning-Network-on-top-of-Bitcoin},
+	howpublished = {
+		\url{https://github.com/renepickhardt/Automatically-Generating-a-Robust-Topology-for-the-Lightning-Network-on-top-of-Bitcoin}
+	},
+	note = {},
+	year = "2019",
+}
 
+@article{
+	bitmex:fee,
+	author = {BitMEX Research},
+	title = {Rouing fee economics},
+	howpublished = {
+	\url{https://blog.bitmex.com/the-lightning-network-part-2-routing-fee-economics/}
+	},
+	note = {},
+	day = "27",
+	month = "March",
+	year = "2019",
+}
+
+@misc{raspitzu:fee,
+	title = {re: Fee Structure},
+	author = {Raspitzu, Andrea},
+	howpublished = { 
+		\url{https://lists.linuxfoundation.org/pipermail/lightning-dev/2019-March/001897.html} 
+	},
+	year = "2019",
+	month = "March",
+	Day = "13"
+}
+
+@misc{ZmnSCPxj:fee,
+	title = {re: Fee Structure},
+	author = {ZmnSCPxj},
+	howpublished = { 
+		\url{https://lists.linuxfoundation.org/pipermail/lightning-dev/2019-March/001899.html} 
+	},
+	year = "2019",
+	month = "March",
+	Day = "14"
+}
+
+@article{
+	bhatia:time:value,
+	author = {Nik Bhatia},
+	title = {The time value of bitcoin},
+	howpublished = {
+		\url{https://medium.com/@timevalueofbtc/the-time-value-of-bitcoin-3807b91f02d2}
+	},
+	note = {},
+	day = "8",
+	month = "June",
+	year = "2018",
+}
 
 % My repositories
 
@@ -812,10 +868,20 @@ year = "",
 	year = "1977",
 	howpublished = {
 		\url{https://www.researchgate.net/publication/216637282_A_Set_of_Measures_of_Centrality_Based_on_Betweenness}
+	},
+}
+
+@book{
+	king:james:bible,
+	author = {  },
+	title = "King James Bible",
+	year = "1611",
+	howpublished = {
+		\url{https://www.biblegateway.com/versions/King-James-Version-KJV-Bible/}
 	}
 }
 
-%% Toplogy algorithms 
+% Toplogy algorithms 
 
 @article{
 	brandes:betweenness:centrality:algorithm,
@@ -826,7 +892,7 @@ year = "",
 	year = "2007",
 	howpublished = {
 	\url{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.72.9610&rep=rep1&type=pdf}
-	}
+	},
 }
 
 @article{
@@ -894,7 +960,7 @@ year = "",
 	year = {1973},
 	howpublished = {
 		\url{ftp://oceane.obs-vlfr.fr/pub/irisson/papers/Maynard%20Smith1973-The%20logic%20of%20animal%20conflict00.pdf}
-	}
+	},
 	note = { }
 }
 
@@ -908,7 +974,7 @@ year = "",
 	year = {1950},
 	howpublished = {
 		\url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1063129/pdf/pnas01550-0057.pdf}
-	}
+	},
 	note = { }
 }
 
