--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -64,7 +64,7 @@ The failures of Bitcoin Classic was just the beginning of the scaling debate. Th
 
 Segregated Witness is in a way an increase in block space as it moves the unlocking script(witness) from the transaction to its own structure. Since each transaction takes up less space, more transactions fit in each block. The upgrade also addresses malleability, which many off-chain solutions require, and aligns economics incentives with resource costs\cite{antonopoulos:segregated:witness:align:economic:incentives}. Although its possible to implement Lightning without a malleability fix, it increases its viability\cite{song:lightning:malleability}.
 
-The malleability fix also addresses covert \texttt{ASICBOOST} or Antbleed. Covert \texttt{ASICBOOST} utilizes that part of \texttt{SHA256} may be pre-calculated if the last 16 bits remain the same. The last 16 bytes in the bitcoin header include the last 4 bytes of the Merkle root. By finding two Merkle Roots with the same last 4 bytes, allowing for less computation in finding hashes. To find a matching pair of roots, many roots must on average be tried. The space of viable roots is reduces if the transaction witness isn't malleable\cite{song:asicboost} as the witness can't be manipulated to change the transaction and thus the Merkle root. Gregory Maxwell alluded that \texttt{ASICBOOST} had in fact been implemented in ASIC chips and proposed a fix\cite{maxwell:asicboost:fix}. Bitmain, the largest chip manufacture, made a statement 2 days after addressing the accusation\cite{bitmain:response}. There is no way of ultimately proving if covert \texttt{ASICBOOST} was ever used\footnote{In further conversation with Bitmain representative Nishant Sharma at their headquarters in Beijing in December 2017 he stated that they would never use \texttt{ASICBOOST} of moral reasons. \texttt{ASICBOOST} was not longer viable on Bitcoin at that time, but was on Bitcoin cash and other currencies. He also stated that bitmain had been in negotiation to buy the patent from Timo Hanke and Sergio Demian Lerner and had thus filed a patent for \texttt{ASICBOOST} with the Chinese government. The deal ultimately didn't fell through, and this information is hearsay at best, but the patent sparked many rumors at that time and drove opposition and is one reason for the eventual split.}. 
+The malleability fix also addresses covert \texttt{ASICBOOST} or Antbleed. Covert \texttt{ASICBOOST} utilizes that part of \texttt{SHA256} may be pre-calculated if the last 16 bits remain the same. The last 16 bytes in the bitcoin header include the last 4 bytes of the Merkle root. By finding two Merkle Roots with the same last 4 bytes, allowing for less computation in finding hashes. To find a matching pair of roots, many roots must on average be tried. The space of viable roots is reduces if the transaction witness isn't malleable\cite{song:asicboost} as the witness can't be manipulated to change the transaction and thus the Merkle root. Gregory Maxwell alluded that \texttt{ASICBOOST} had in fact been implemented in ASIC chips and proposed a fix\cite{maxwell:asicboost:fix}. Bitmain, the largest chip manufacture, made a statement 2 days after addressing the accusation\cite{bitmain:response}. There is no way of ultimately proving if covert \texttt{ASICBOOST} was ever used\footnote{In further conversation with Bitmain representative Nishant Sharma at their headquarters in Beijing in December 2017 he stated that they would never use \texttt{ASICBOOST} of moral reasons. \texttt{ASICBOOST} was not longer viable on Bitcoin at that time, but was on Bitcoin cash and other currencies. He also stated that bitmain had been in negotiation to buy the patent from Timo Hanke and Sergio Demian Lerner and had thus filed a patent for \texttt{ASICBOOST} with the Chinese government. The deal ultimately didn't fell through, and while this information is hearsay at best, the patent sparked many rumors at the time and drove opposition and is one reason for the eventual split.}. 
 
 Segregated Witness When BIP148\cite{bip:148:uasf:segwit}, a \textit{user-activated-soft-fork} scheduled for 22 August 2017 to activate Segregated Witness, was getting traction among nodes, the opposing party(including aforementioned Bitmain) decided to hard fork bitcoin into two by raising the block size limit. The hard fork took place on the first of August 2017 and created Bitcoin Cash.
 
