--- a/docs/thesis/glossary.tex
+++ b/docs/thesis/glossary.tex
@@ -21,7 +21,10 @@
 		program that implements that API}}
 
 %%% define the acronym and use the see= option
-\newglossaryentry{api}{type=\acronymtype, name={Application Programming Interface}, description={Application
-		Programming Interface}, first={Application
-		Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{apig}}
+%\newglossaryentry{api}{type=\acronymtype, name={Application Programming Interface}, description={Application
+%		Programming Interface}, first={Application
+%		Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{apig}}
 
+\newglossaryentry{bitcoin}{name={Bitcoin}, description={Bitcoin is a peer-to-peer electronic cash network and a currency native to the network}}
+
+\newglossaryentry{blockchain}{name={blockchain},description={A blockchain is a growing datastructure consistent of blocks containing transactions, a cryptograpic hash of the previous block and a timestamp. It is record or ledger over the full transaction history.  }}
