refined abstract, beginning acknowledgement

--- a/docs/thesis/abstract.tex
+++ b/docs/thesis/abstract.tex
@@ -1,39 +1,20 @@
 \centering \textbf{Abstract}
 
-\iffalse
-    In camera pre-calibration, images of a calibration object are commonly 
-    used to determine the internal geometry of a camera.
-    The calibration imaging is often optimized to have the calibration object 
-    cover as large image area as possible.
-    This is likely to yield a larger concentration
-    of measured image points near the center of the image sensor.
-    In this report, the hypothesis is investigated that this 
-    non-uniform image point distribution results in a sub-optimal calibration.
-    An area-based re-weighting scheme is suggested to improve the calibration.
-    Additionally, the effect of a choice between a 2D and a 3D calibration
-    object is investigated.
-    
-    A simulation study was performed where both a standard and area-weighted
-    pre-calibration scheme was used in a parallel and a convergent scene.
-    The estimated uncertainty and true errors were computed
-    and compared to the first order predictions and results of perfect calibrations.
-    The area-based calibration showed no reduction in estimation errors.
-    Furthermore, the 3D calibration object did not give a noticeable improvement.
-    However, for the standard and area-based calibrations, the true errors
-    surpassed the estimated uncertainties by up to
-    26 and 58 percent, respectively.
-\fi
-
-	In payment channel network, such as the lightning network, the routing
-	nodes receives a fee as compensation for displaced liquidity, time value of money and operational
-	costs. Currently this fee is mostly manually set procuring an unoptimized profit to
-	the node operator. TODO: TYPES OF POLICIES HERE, NOT ONLT PRICE BIT PREFERENTIAL ATTACHMENT, RECEIVED CHANNELS
-	AND OPTIMAL STRATEGY AS PRODUCT OF OTHERS STRATEGIES; HENCE GAME THEORY. 
-	
-	A simulation study was performed where many policies was pitted against 
-	each other to find emergent equilibria under competitive market pressure. Were such
-	equilibrium may lie have further consequences for the network in form
-	of total throughput, routing cost and robustness.
+In payment channel networks, such as the Bitcoin native Lightning Network, the routing
+nodes receives a fee as compensation for displaced liquidity, time value of money and operational
+costs. Currently this fee is mostly manually set procuring an unoptimized profit to
+the node operator. The network dynamics may be modeled as a graph and each node as an actor
+utilizing strategies in fee price setting, preferential attachment, timing, allocation and
+funding akin to Game Theodoric models. Further assuming rational actors and strategy propagation is  
+proportional to population suggest similar methodology to Evolutionary Game Theory where
+a strategy's fitness will emerge as a fraction of population size.
+		
+A simulation study was performed where strategies were played against 
+each other to find emergent equilibria under competitive market pressure. Were such
+equilibrium may lie have further consequences for the network in form
+of total throughput, routing cost and robustness. This study suggest 
+... strategies and a robust network topology with short average paths 
+will emerge from free competition.
 		 
 	
 	
